--- a/.github/ISSUE_TEMPLATE/3 bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/3 bug_report.yml
@@ -1,6 +1,6 @@
 name: Bug report
 description: Report something that isn't working correctly
-title: "[Bug]: "
+title: ""
 labels: ["bug"]
 body:
   - type: textarea
