--- a/.github/ISSUE_TEMPLATE/2 project_update.yml
+++ b/.github/ISSUE_TEMPLATE/2 project_update.yml
@@ -1,7 +1,7 @@
 name: Update an Existing Project
 description: Report cards that need to be changed or added in a project already on Inexorable Fate
 title: ""
-labels: ["project update"]
+labels: ["project change"]
 body:
   - type: input
     id: project-name
