--- a/.github/ISSUE_TEMPLATE/6. eons_cleanup.yml
+++ b/.github/ISSUE_TEMPLATE/6. eons_cleanup.yml
@@ -14,10 +14,11 @@ body:
         - label: Original compressed file saved as backup
         - label: Unnecessary files (exported images, etc.) deleted
         - label: Recreate any older cards where templates didn't exist with correct templates
-        - label: Run Zoop Populate Investigator on investigators
-        - label: Delete identical duplicates of any card and add quantity to SE instead
+        - label: Run Zoop Populate Investigator on investigators (if any)
+        - label: Delete identical duplicate cards (if any) and add quantity to SE instead
         - label: Compare cards to originals and fix any issues where the SE files were outdated
         - label: Fix any line breaks/hanging indents/text area overflow caused by the switch to Arno Pro
-        - label: Replace full empty lines with <vs>
+        - label: Replace full empty lines with `<vs>`
         - label: Look for broken image links in cards (red X) and replace path
         - label: Confirm collection icons are white on black or black on parchment
+        - label: Number cards if needed
