--- a/.github/ISSUE_TEMPLATE/1 project_add.yml
+++ b/.github/ISSUE_TEMPLATE/1 project_add.yml
@@ -71,7 +71,8 @@ body:
         Will you contribute your Strange Eons project files to the repository used by Inexorable Fate, arkham.build, and TTS?
         This repository allows us to ensure that project files are cleaned up and standardized to meet the needs of all three platforms.
         For our part, Inexorable Fate will work to ensure prints of your project are of the highest quality.
-        Note that if you want to make future changes to your project (including uploading to TTS), we request that you retrieve our copy of the SE files and provide us with an updated copy when you are finished.
+        Note that if you want to make future changes to your project (including uploading to TTS), we request that you retrieve our 
+        copy of the SE files and provide us with an updated copy when you are finished.
         To share, please compress copy of your entire project, including art (but not cards that ended up being cut from the project).
         [Upload the file to our drive](https://drive.google.com/drive/folders/1U7eooy6b_n8DTA3KqbgzSkOZLky7FZTI?usp=sharing) or provide a link where we can download it.
         Please let us know if you have questions.
