--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -10,7 +10,7 @@ jobs:
     name: Add issue to project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/add-to-project@RELEASE_VERSION
+      - uses: actions/add-to-project
         with:
           project-url: https://github.com/orgs/Inexorable-Fate/projects/1
           github-token: ${{ secrets.INEXF_PROJECT_PAT }}
